syntax = "proto2";
package message.product;
// 拼团列表请求
message PintuanActivityListReq {
    required int64 store_id = 1; //自提点id
    repeated int64 wholesaler_id = 2; // 供应商id 一维数组
    optional int64 page = 3;
    optional int64 page_size = 4;
    optional int64 topic_id = 5;
}
